--- a/src/p.tex
+++ b/src/p.tex
@@ -4748,6 +4748,37 @@ $1$行目や$1$列目以外の行や列で展開することもできる.
   $\det(A)=0$である.
 \end{prop}
 
+\begin{example}
+  $k<l$とし,
+  基本行列$H(k,l)$について考える.
+  $\det(H(k,l))=-1$であることを示す.
+  
+  基本行列$H(k,l)$の$l$行目の成分は$k$列目を除きすべて0である.
+  したがって, $l$行目で展開することで,
+  \begin{align*}
+    \det(H(k,l))=(-1)^{l+k}\cdot 1 \cdot \det(\pi_{l,k}(H(k,l)))
+  \end{align*}
+  であることがわかる.
+  また,
+  $\pi_{l,k}(H(k,l))$では$H(k,l)$の$k$列目は取り除かれているので,
+  $(k,l-1)$-成分が1である.
+  また,
+  $\pi_{l,k}(H(k,l))$の$k$行目の成分は$l-1$列目を除きすべて0である.
+  したがって, $k$行目で展開することで,
+  \begin{align*}
+    \det(\pi_{l,k}(H(k,l)))=(-1)^{k+l-1}\cdot \det(\pi_{k,l-1}(\pi_{l,k}(H(k,l))))
+  \end{align*}
+  であることがわかる.
+  $\pi_{k,l-1}(\pi_{l,k}(H(k,l)))$は,
+  $H(k,l)$の, $k$行目と$l$行目, $k$列目と$l$列目を取り除いたものであるので,
+  単位行列$E_{n-2}$である.
+  $\det(E_{n-2})=1$であるから,
+  \begin{align*}
+    \det(H(k,l))=(-1)^{l+k}\cdot (-1)^{k+l-1}=-1
+  \end{align*}
+  である.
+\end{example}
+
 
 \section{行列式の閉じた式よる表示}
 
@@ -4858,7 +4889,8 @@ $I$に属する組の総数$\#I(\sigma)$を$\sigma$の
   \end{align*}
 \end{theorem}
 
-基本行列$H(i,j)$の行列式を計算する.
+すでに基本行列$H(i,j)$の行列式は知っているが,
+\Cref{thm:det:closedformula}を用いて計算する.
 \begin{example}
   $i<j$とし,
   $1$から$n$を順に並べたものを$i$と$j$だけ入れ替えた順列を$\tau$とする.
